Update readme with notebook upload instructions

--- a/contributers/Rupal/readme
+++ b/contributers/Rupal/readme
@@ -1,1 +1,4 @@
 Please upload your notebooks here as contributers.
+1. Upload Notebook in SQL (Spark SQL Code) and Pyspark.
+
+Refer 01_Project.dbc > for reference
